--- a/config/playground/helm/preview/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/preview/helm-opensearch-dashboards.yaml
@@ -121,10 +121,29 @@ config:
     opensearch_security.openid.client_secret: ${OPENID_CLIENT_SECRET}
     opensearch_security.openid.logout_url: ${OPENID_LOGOUT_URL}
 
+    # uiSettings:
+    #   overrides:
+    #     "theme:next": true
+    #     "theme:darkMode": true
+
     uiSettings:
       overrides:
-        "theme:next": true
-        "theme:darkMode": true
+        "query:enhancements:enabled": true
+        "query:dataSource:readOnly": false
+        "query:dataSourceReadOnly": false
+        "home:useNewHomePage": true
+
+    # Workspace
+    workspace.enabled: true
+    savedObjects.permission.enabled: true
+    opensearchDashboards.dashboardAdmin.users: ["admin", "test1"]
+    assistant.chat.enabled: false
+
+    queryEnhancements.queryAssist.summary.enabled: true
+    assistant.smartAnomalyDetector.enabled: true
+    assistant.alertInsight.enabled: true
+    assistant.text2viz.enabled: true
+    data_source.ssl.verificationMode: none
 
     # Content security policy(csp) settings
     csp.rules: [ "connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;" ]
